org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-03
	- upload: setting file extension to .owl per aquaportal requirement
	
	- hot link to uploaded ontology upon succesful submission.
	
	
2008-11-02

	- Fixed Issue 10: load a registered ontology
		- This is now completed for the case when the URI is passed as a parameter
		  ontologyUri=uuuu along with the new parameter "_edit" which should be
		  set to "_edit=y" to allow the edition of a new version of the ontology.
		  
		  (Note: the button to "load a registered ontology" is not yet implemented
		  and perhaps it shouldn't at least initially, the reasons being:
		  	- Main entry point to create a new version is the Aquaportal front-end;
		  	- This way, the user is already logged-in and in fact she can only launch
		  	  the edition of her own ontologies, so this control is already in place.
		  	  
	- Username is not shown if ontmd is launched with the userId and sessionId params.
			
		
	- some code clean-up:
		-MdHelper: removed unused stuff (AttributeValue class, title).
		
	- Fixed Issue 11: Assign DC from the Omv and OmvMmi props -- and vice versa!
	  This happens at two moments:
	  	- When an ontology is loaded: Existing DC attributes are used to fill in
	  	  missing MMI attributes.
	  	- When the "review" process is executed: Existing MMI attributes are used 
	  	  to fill in missing DC attributes.
	  Equivalences were defined in MdHelper.
	  
	- Improved error checking and diagnostics upon initial loading of an ontology. 
		
2008-11-01
	- MetadataPanel doesn't show the original base URI anymore; this info is already
	  provided in the Ontology panel.
	  
	- Fixed 18: "namespace not updated". Main changes in OntMdServiceImpl:
	  - _replaceNameSpace(OntModel model, String oldNameSpace, String newNameSpace)
	    updates all statements having any element in the original namespace to be in the
	    new namespace.